--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "mongodb": "^5.1.0",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.7.2"
