--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
+    "ipinfo": "^1.5.2",
     "mongodb": "^5.1.0",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.7.2"
